# openapi

./: README.md  generate_api.sh  openapi.yaml  pyproject.toml
components/schemas/: me.yaml
paths/: me.yaml
