[tool.poetry]
name = "openapi"
version = "0.1.0"
description = "A FastAPI backend service"
authors = ["Shaohong Qiu <qiushaohong@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "openapi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112"
uvicorn = { version = "^0.30.5", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

